Build an hash executable
to quickly the hashed value of a given String

Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>

--- a/exporter/Makefile
+++ b/exporter/Makefile
@@ -5,6 +5,7 @@ clean:
 
 build: clean
 	go build -o ./bin/exporter cmd/exporter/main.go
+	go build -o ./bin/hash cmd/hash/main.go
 
 test: build
 	go test -v ./pkg/...
