--- a/runtime-samples/golang-app/Makefile
+++ b/runtime-samples/golang-app/Makefile
@@ -3,5 +3,8 @@
 build:
 	go build -o http-server http-server.go
 
+build-fips:
+	GOEXPERIMENT=strictfipsruntime go build  -tags strictfipsruntime -o http-server http-server.go
+
 push:
 	./deploy.sh
